--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 *.db filter=lfs diff=lfs merge=lfs -text
+*.* filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.py filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
+*.gitattributes filter=lfs diff=lfs merge=lfs -text
+* filter=lfs diff=lfs merge=lfs -text
